--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ https://github.com/bayashi/Duadua/commits/master
 
 https://github.com/bayashi/Duadua/tags
 
-## Show the commit logs / diff of last tag
+## Last Release
 
-https://github.com/bayashi/Duadua/compare/0.12...0.13
+0.13   Fri Mar 10 23:45:01 JST 2020
+    - https://github.com/bayashi/Duadua/compare/0.12...0.13
